err/mz.err
Listing '.'...
Listing './bin'...
Compiling './bin/clear_comtypes_cache.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/comtypes'...
Listing './lib/python3.5/site-packages/comtypes/client'...
Listing './lib/python3.5/site-packages/comtypes/server'...
Listing './lib/python3.5/site-packages/comtypes/test'...
Listing './lib/python3.5/site-packages/comtypes/tools'...
Listing './lib/python3.5/site-packages/comtypes-1.1.4.egg-info'...
Listing './lib/python3.5/site-packages/mz'...
Listing './lib/python3.5/site-packages/mz/API'...
Compiling './lib/python3.5/site-packages/mz/API/mzML.py'...
***   File "./lib/python3.5/site-packages/mz/API/mzML.py", line 194
    print "this ms2 didn't have precursor mz...", elem.get("id")
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mz/API/mzURL.py'...
***   File "./lib/python3.5/site-packages/mz/API/mzURL.py", line 76
    except pycurl.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mz/API/raw.py'...
***   File "./lib/python3.5/site-packages/mz/API/raw.py", line 53
    print retval
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mz/report'...
Compiling './lib/python3.5/site-packages/mz/report/DB.py'...
***   File "./lib/python3.5/site-packages/mz/report/DB.py", line 182
    raise IndexError, "No row to add an image to"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mz/report/Spreadsheet.py'...
***   File "./lib/python3.5/site-packages/mz/report/Spreadsheet.py", line 97
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mz/report/__init__.py'...
***   File "./lib/python3.5/site-packages/mz/report/__init__.py", line 172
    raise NotImplementedError, "Subclasses must override this method"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mz/report/formats'...
Compiling './lib/python3.5/site-packages/mz/report/formats/omssa.py'...
***   File "./lib/python3.5/site-packages/mz/report/formats/omssa.py", line 96
    return `mz`
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mz/tools'...
Listing './lib/python3.5/site-packages/mz-1.3.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
